# mogu-memory

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
mogu_memory/: __init__.py  chunker.py  cli.py  config.py  db.py  embedder.py  searcher.py
tests/: test_chunker.py  test_db.py  test_embedder.py  test_searcher.py
