[project]
name = "mogu-memory"
version = "0.1.0"
description = "Long-term memory system for Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.0",
    "click>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
mogu-memory = "mogu_memory.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
